Avoid RTTI mix-ups by exporting KeyListModelInterface

This attempts to fix a crash on FreeBSD. See: D26393 for
more info.

BUG: 415168